--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -34,28 +34,36 @@
             <!-- Name -->
             <div class="relative w-full mb-3">
               <label
-                class="block  text-blueGray-600 text-xs font-bold mb-2"
+                class="block text-blueGray-600 text-xs font-bold mb-2"
                 htmlFor="grid-password"
               >
                 Full Name:
               </label>
               <div class="relative flex w-full flex-wrap items-stretch mb-3">
-                <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                <span
+                  class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
+                >
                   <i class="fas fa-user"></i>
                 </span>
-                <input type="text" placeholder="Full Name" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10"/>
+                <input
+                  type="text"
+                  placeholder="Full Name"
+                  class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10"
+                />
               </div>
             </div>
             <!-- Email -->
             <div class="relative w-full mb-3">
               <label
-                class="block  text-blueGray-600 text-xs font-bold mb-2"
+                class="block text-blueGray-600 text-xs font-bold mb-2"
                 htmlFor="grid-password"
               >
                 Email:
               </label>
               <div class="relative flex w-full flex-wrap items-stretch mb-3">
-                <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                <span
+                  class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
+                >
                   <i class="fas fa-envelope"></i>
                 </span>
                 <input
@@ -68,18 +76,24 @@
             <!-- Mobile Number -->
             <div class="relative w-full mb-3">
               <label
-                class="block  text-blueGray-600 text-xs font-bold mb-2"
+                class="block text-blueGray-600 text-xs font-bold mb-2"
                 htmlFor="grid-password"
               >
                 Mobile Number:
               </label>
               <div class="flex">
                 <div class="relative w-4/12 flex-1">
-                  <div class="relative flex w-full flex-wrap items-stretch mb-3">
-                    <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                  <div
+                    class="relative flex w-full flex-wrap items-stretch mb-3"
+                  >
+                    <span
+                      class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
+                    >
                       <i class="fas fa-flag"></i>
                     </span>
-                    <select class="form-select border-0 px-3 py-3 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10">
+                    <select
+                      class="form-select border-0 px-3 py-3 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10"
+                    >
                       <option value="">+91</option>
                       <option value="">+99</option>
                       <option value="">+12</option>
@@ -87,46 +101,64 @@
                   </div>
                 </div>
                 <div class="relative w-4/12 ml-2 flex-1">
-                  <div class="relative flex w-full flex-wrap items-stretch mb-3">
-                    <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                  <div
+                    class="relative flex w-full flex-wrap items-stretch mb-3"
+                  >
+                    <span
+                      class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
+                    >
                       <i class="fas fa-phone"></i>
                     </span>
-                    <input type="number" placeholder="Mobile Number" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10"/>
+                    <input
+                      type="number"
+                      placeholder="Mobile Number"
+                      class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10"
+                    />
                   </div>
-
                 </div>
               </div>
-
             </div>
             <div class="flex">
               <!-- Password -->
               <div class="relative w-full mb-3 mr-2">
                 <label
-                  class="block  text-blueGray-600 text-xs font-bold mb-2"
+                  class="block text-blueGray-600 text-xs font-bold mb-2"
                   htmlFor="grid-password"
                 >
                   Password:
                 </label>
                 <div class="relative flex w-full flex-wrap items-stretch mb-3">
-                  <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                  <span
+                    class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
+                  >
                     <i class="fas fa-lock"></i>
                   </span>
-                  <input type="password" placeholder="Password" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 w-full pl-10"/>
+                  <input
+                    type="password"
+                    placeholder="Password"
+                    class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 w-full pl-10"
+                  />
                 </div>
               </div>
               <!-- Confirm Password -->
               <div class="relative w-full mb-3 ml-2">
                 <label
-                  class="block  text-blueGray-600 text-xs font-bold mb-2"
+                  class="block text-blueGray-600 text-xs font-bold mb-2"
                   htmlFor="grid-password"
                 >
                   Confirm Password:
                 </label>
                 <div class="relative flex w-full flex-wrap items-stretch mb-3">
-                  <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                  <span
+                    class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
+                  >
                     <i class="fas fa-lock"></i>
                   </span>
-                  <input type="password" placeholder="Repeat Password" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 w-full pl-10"/>
+                  <input
+                    type="password"
+                    placeholder="Repeat Password"
+                    class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 w-full pl-10"
+                  />
                 </div>
               </div>
             </div>
@@ -149,8 +181,12 @@
             </div>
             <!-- Create Account Button -->
             <div class="flex justify-between align-center mt-6">
-              <button class="text-lightBlue-500 background-transparent font-bold uppercase px-3 py-1 text-xs outline-none hover:underline focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
-                <i class="fas fa-arrow-left"></i> Already have a account
+              <button
+                class="text-lightBlue-500 background-transparent font-bold uppercase px-3 py-1 text-xs outline-none hover:underline focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
+                type="button"
+              >
+                <i class="fas fa-arrow-left"></i>
+                <a [routerLink]="['/auth/login']">Already have a account</a>
               </button>
               <button
                 class="bg-blueGray-600 uppercase text-white active:bg-blueGray-800 text-sm font-bold px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
