--- a/src/app/views/owner-dashboard/owner-dashboard.component.html
+++ b/src/app/views/owner-dashboard/owner-dashboard.component.html
@@ -251,14 +251,14 @@
       <div
         class="text-blueGray-700 rounded-lg shadow-lg flex justify-center bg-white border border-solid border-blueGray-100"
       >
-        <app-card-calender class="p-10"></app-card-calender>
+        <!-- <app-card-calender class="p-10"></app-card-calender> -->
       </div>
     </div>
     <div class="w-full px-4 flex-1">
       <div
         class="p-10 text-blueGray-700 flex justify-center shadow-lg rounded-lg border border-solid border-blueGray-100 bg-white"
       >
-        <app-card-donutchart></app-card-donutchart>
+        <!-- <app-card-donutchart></app-card-donutchart> -->
       </div>
     </div>
   </div>
